--- a/index.html
+++ b/index.html
@@ -15,30 +15,75 @@
     <title>Frontend Mentor | [Challenge Name Here]</title>
   </head>
   <body>
-    <div class="profile">Samuel Green Available to Walk</div>
+    <div class="bg"></div>
+    <div class="wrapper">
+      <div class="card">
+        <div class="cut"></div>
+        <div class="profile">
+          <div class="profile-left">
+            <svg
+              stroke="currentColor"
+              fill="currentColor"
+              stroke-width="0"
+              viewBox="0 0 256 512"
+              height="2em"
+              width="2em"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
+              ></path>
+            </svg>
+            <img class="avatar" src="./images/avatar.jpg" alt="" srcset="" />
+            <div class="name">
+              <h2>Samuel Green</h2>
+              <p class="status">Available to Walk</p>
+            </div>
+          </div>
+          <svg
+            stroke="currentColor"
+            fill="currentColor"
+            stroke-width="0"
+            viewBox="0 0 16 16"
+            height="1em"
+            width="1em"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M9.5 13a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zm0-5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zm0-5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0z"
+              clip-rule="evenodd"
+            ></path>
+          </svg>
+        </div>
 
-    <div class="walker-msg">That sounds great. I’d be happy with that.</div>
-    <div class="walker-msg">
-      Could you send over some pictures of your dog, please?
+        <div class="walker-msg">That sounds great. I’d be happy with that.</div>
+        <div class="walker-msg">
+          Could you send over some pictures of your dog, please?
+        </div>
+        <div class="customer-msg">
+          Here are a few pictures. She’s a happy girl!
+        </div>
+        <div class="customer-msg">Can you make it?</div>
+
+        <div class="walker-msg">
+          She looks so happy! The time we discussed works. How long shall I take
+          her out for?
+        </div>
+
+        <div class="walker-msg offer-small">30 minute walk $29</div>
+
+        <div class="walker-msg offer-big">1 hour walk $49</div>
+
+        <div class="text-field">Type a message…</div>
+      </div>
+      <h1>Simple booking</h1>
+      <p class="text">
+        Stay in touch with our dog walkers through the chat interface. This
+        makes it easy to discuss arrangements and make bookings. Once the walk
+        has been completed you can rate your walker and book again all through
+        the chat.
+      </p>
     </div>
-    <div class="customer-msg">Here are a few pictures. She’s a happy girl!</div>
-    <div class="customer-msg">Can you make it?</div>
-
-    <div class="walker-msg">
-      She looks so happy! The time we discussed works. How long shall I take her
-      out for?
-    </div>
-
-    <div class="walker-msg offer-small">30 minute walk $29</div>
-
-    <div class="walker-msg offer-big">1 hour walk $49</div>
-
-    <div class="text-field">Type a message…</div>
-    <h1>Simple booking</h1>
-    <p class="text">
-      Stay in touch with our dog walkers through the chat interface. This makes
-      it easy to discuss arrangements and make bookings. Once the walk has been
-      completed you can rate your walker and book again all through the chat.
-    </p>
   </body>
 </html>
