--- a/index.html
+++ b/index.html
@@ -56,25 +56,93 @@
             ></path>
           </svg>
         </div>
+        <div class="wrapper-msg">
+          <div class="wrapper-msg-left">
+            <div class="walker-msg">
+              That sounds great. I’d be happy to discuss more.
+            </div>
+            <div class="walker-msg">
+              Could you send over some pictures of your dog, please?
+            </div>
+          </div>
+          <div class="wrapper-msg-right">
+            <div class="wrapper-imgs">
+              <img
+                class="dog"
+                src="./images/dog-image-1.jpg"
+                alt="dog"
+                srcset=""
+              />
+              <img
+                class="dog"
+                src="./images/dog-image-2.jpg"
+                alt="dog"
+                srcset=""
+              />
+              <img
+                class="dog"
+                src="./images/dog-image-3.jpg"
+                alt="dog"
+                srcset=""
+              />
+            </div>
+          </div>
+          <div class="wrapper-msg-right">
+            <div class="customer-msg">
+              Here are a few pictures. She’s a happy girl!
+            </div>
+            <div class="customer-msg">Can you make it?</div>
+          </div>
+          <div class="walker-msg">
+            She looks so happy! The time we discussed works. How long shall I
+            take her out for?
+          </div>
 
-        <div class="walker-msg">That sounds great. I’d be happy with that.</div>
-        <div class="walker-msg">
-          Could you send over some pictures of your dog, please?
+          <div class="walker-msg offer">
+            <svg
+              stroke="currentColor"
+              fill="currentColor"
+              stroke-width="0"
+              viewBox="0 0 16 16"
+              height="1.5em"
+              width="1.5em"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M8 15A7 7 0 108 1a7 7 0 000 14zm0 1A8 8 0 108 0a8 8 0 000 16z"
+                clip-rule="evenodd"
+              ></path>
+            </svg>
+            <p>30 minute walk<span>$29</span></p>
+          </div>
+
+          <div class="walker-msg offer">
+            <svg
+              stroke="currentColor"
+              fill="currentColor"
+              stroke-width="0"
+              viewBox="0 0 16 16"
+              height="1.5em"
+              width="1.5em"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M8 15A7 7 0 108 1a7 7 0 000 14zm0 1A8 8 0 108 0a8 8 0 000 16z"
+                clip-rule="evenodd"
+              ></path>
+            </svg>
+            <div class="price">
+              <div class="angebot">
+                <p>1 hour walk</p>
+              </div>
+              <div class="dollar">
+                <p>$49</p>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="customer-msg">
-          Here are a few pictures. She’s a happy girl!
-        </div>
-        <div class="customer-msg">Can you make it?</div>
-
-        <div class="walker-msg">
-          She looks so happy! The time we discussed works. How long shall I take
-          her out for?
-        </div>
-
-        <div class="walker-msg offer-small">30 minute walk $29</div>
-
-        <div class="walker-msg offer-big">1 hour walk $49</div>
-
         <div class="text-field">Type a message…</div>
       </div>
       <h1>Simple booking</h1>
