--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="wrapper">
       <div class="card">
         <div class="cut"></div>
-        <div class="profile">
+        <div class="profile shadow">
           <div class="profile-left">
             <svg
               stroke="currentColor"
@@ -58,29 +58,29 @@
         </div>
         <div class="wrapper-msg">
           <div class="wrapper-msg-left">
-            <div class="walker-msg">
+            <div class="walker-msg shadow">
               That sounds great. I’d be happy to discuss more.
             </div>
-            <div class="walker-msg">
+            <div class="walker-msg shadow">
               Could you send over some pictures of your dog, please?
             </div>
           </div>
           <div class="wrapper-msg-right">
             <div class="wrapper-imgs">
               <img
-                class="dog"
+                class="dog shadow"
                 src="./images/dog-image-1.jpg"
                 alt="dog"
                 srcset=""
               />
               <img
-                class="dog"
+                class="dog shadow"
                 src="./images/dog-image-2.jpg"
                 alt="dog"
                 srcset=""
               />
               <img
-                class="dog"
+                class="dog shadow"
                 src="./images/dog-image-3.jpg"
                 alt="dog"
                 srcset=""
@@ -88,53 +88,60 @@
             </div>
           </div>
           <div class="wrapper-msg-right">
-            <div class="customer-msg">
+            <div class="customer-msg shadow">
               Here are a few pictures. She’s a happy girl!
             </div>
-            <div class="customer-msg">Can you make it?</div>
+            <div class="customer-msg shadow">Can you make it?</div>
           </div>
-          <div class="walker-msg">
+          <div class="walker-msg shadow">
             She looks so happy! The time we discussed works. How long shall I
             take her out for?
           </div>
 
-          <div class="walker-msg offer">
-            <svg
-              stroke="currentColor"
-              fill="currentColor"
-              stroke-width="0"
-              viewBox="0 0 16 16"
-              height="1.5em"
-              width="1.5em"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                fill-rule="evenodd"
-                d="M8 15A7 7 0 108 1a7 7 0 000 14zm0 1A8 8 0 108 0a8 8 0 000 16z"
-                clip-rule="evenodd"
-              ></path>
-            </svg>
-            <p>30 minute walk<span>$29</span></p>
-          </div>
-
-          <div class="walker-msg offer">
-            <svg
-              stroke="currentColor"
-              fill="currentColor"
-              stroke-width="0"
-              viewBox="0 0 16 16"
-              height="1.5em"
-              width="1.5em"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                fill-rule="evenodd"
-                d="M8 15A7 7 0 108 1a7 7 0 000 14zm0 1A8 8 0 108 0a8 8 0 000 16z"
-                clip-rule="evenodd"
-              ></path>
-            </svg>
+          <div class="walker-msg offer shadow">
             <div class="price">
               <div class="angebot">
+                <svg
+                  stroke="currentColor"
+                  fill="currentColor"
+                  stroke-width="0"
+                  viewBox="0 0 16 16"
+                  height="1.5em"
+                  width="1.5em"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    d="M8 15A7 7 0 108 1a7 7 0 000 14zm0 1A8 8 0 108 0a8 8 0 000 16z"
+                    clip-rule="evenodd"
+                  ></path>
+                </svg>
+                <p>30 minutes walk</p>
+              </div>
+              <div class="dollar">
+                <p>$29</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="walker-msg offer shadow">
+            <div class="price">
+              <div class="angebot">
+                <svg
+                  stroke="currentColor"
+                  fill="currentColor"
+                  stroke-width="0"
+                  viewBox="0 0 16 16"
+                  height="1.5em"
+                  width="1.5em"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    d="M8 15A7 7 0 108 1a7 7 0 000 14zm0 1A8 8 0 108 0a8 8 0 000 16z"
+                    clip-rule="evenodd"
+                  ></path>
+                </svg>
                 <p>1 hour walk</p>
               </div>
               <div class="dollar">
@@ -142,8 +149,26 @@
               </div>
             </div>
           </div>
+          <div class="msg-field">
+            <div class="wrapper-input">
+              <p>Type a message...</p>
+              <svg
+                class="submit"
+                stroke="currentColor"
+                fill="currentColor"
+                stroke-width="0"
+                viewBox="0 0 512 512"
+                height="3rem"
+                width="3rem"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M48 256c0 114.9 93.1 208 208 208s208-93.1 208-208S370.9 48 256 48 48 141.1 48 256zm244.5 0l-81.9-81.1c-7.5-7.5-7.5-19.8 0-27.3s19.8-7.5 27.3 0l95.4 95.7c7.3 7.3 7.5 19.1.6 26.6l-94 94.3c-3.8 3.8-8.7 5.7-13.7 5.7-4.9 0-9.9-1.9-13.6-5.6-7.5-7.5-7.6-19.7 0-27.3l79.9-81z"
+                ></path>
+              </svg>
+            </div>
+          </div>
         </div>
-        <div class="text-field">Type a message…</div>
       </div>
       <h1>Simple booking</h1>
       <p class="text">
