--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
     <title>Frontend Mentor | [Challenge Name Here]</title>
   </head>
   <body>
-    <div class="bg"></div>
     <div class="wrapper">
-      <div class="card">
+      <div class="card shadow">
         <div class="cut"></div>
-        <div class="profile shadow">
+        <div class="profile">
           <div class="profile-left">
             <svg
               stroke="currentColor"
@@ -149,34 +148,35 @@
               </div>
             </div>
           </div>
-          <div class="msg-field">
-            <div class="wrapper-input">
-              <p>Type a message...</p>
-              <svg
-                class="submit"
-                stroke="currentColor"
-                fill="currentColor"
-                stroke-width="0"
-                viewBox="0 0 512 512"
-                height="3rem"
-                width="3rem"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M48 256c0 114.9 93.1 208 208 208s208-93.1 208-208S370.9 48 256 48 48 141.1 48 256zm244.5 0l-81.9-81.1c-7.5-7.5-7.5-19.8 0-27.3s19.8-7.5 27.3 0l95.4 95.7c7.3 7.3 7.5 19.1.6 26.6l-94 94.3c-3.8 3.8-8.7 5.7-13.7 5.7-4.9 0-9.9-1.9-13.6-5.6-7.5-7.5-7.6-19.7 0-27.3l79.9-81z"
-                ></path>
-              </svg>
-            </div>
+
+          <div class="wrapper-input">
+            <p>Type a message...</p>
+            <svg
+              class="submit"
+              stroke="currentColor"
+              fill="currentColor"
+              stroke-width="0"
+              viewBox="0 0 512 512"
+              height="2rem"
+              width="2rem"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M48 256c0 114.9 93.1 208 208 208s208-93.1 208-208S370.9 48 256 48 48 141.1 48 256zm244.5 0l-81.9-81.1c-7.5-7.5-7.5-19.8 0-27.3s19.8-7.5 27.3 0l95.4 95.7c7.3 7.3 7.5 19.1.6 26.6l-94 94.3c-3.8 3.8-8.7 5.7-13.7 5.7-4.9 0-9.9-1.9-13.6-5.6-7.5-7.5-7.6-19.7 0-27.3l79.9-81z"
+              ></path>
+            </svg>
           </div>
         </div>
       </div>
-      <h1>Simple booking</h1>
-      <p class="text">
-        Stay in touch with our dog walkers through the chat interface. This
-        makes it easy to discuss arrangements and make bookings. Once the walk
-        has been completed you can rate your walker and book again all through
-        the chat.
-      </p>
+      <div class="description">
+        <h1>Simple booking</h1>
+        <p class="text">
+          Stay in touch with our dog walkers through the chat interface. This
+          makes it easy to discuss arrangements and make bookings. Once the walk
+          has been completed you can rate your walker and book again all through
+          the chat.
+        </p>
+      </div>
     </div>
   </body>
 </html>
